src/runboat/kubefiles/ingress_mailhog.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog
spec:
  ingressClassName: nginx
  tls:
    - secretName: runboat-builds-wildcard-tls
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo
                port:
                  number: 8025
